@@ -21,7 +21,7 @@ package VASSAL.tools.io;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.nio.charset.Charset;
+import java.nio.file.Files;
 
 import org.junit.Test;
 
@@ -85,11 +85,9 @@ public class TailerTest {
     tailer.stop();
 
     final String actual = sb_tailer.toString();
-
-    String expected;
-    try (FileInputStream in = new FileInputStream(file)) {
-      expected = IOUtils.toString(in, Charset.defaultCharset()).substring(0, actual.length());
-    }
+    final String expected = Files.readString(file.toPath())
+                                 .replace("\r\n", "\n")
+                                 .substring(0, actual.length());
 
     // compare whatever the Tailer had time to read
     assertEquals(expected, actual);
